--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "uber-turbo"
-version = "0.1.1"
+version = "0.1.2"
 description = "Packaged fork from uber-research/TuRBO"
 authors = ["Uber Reasearch"]
 license = "https://github.com/uber-research/TuRBO/blob/master/LICENSE.md"
 readme = "README.md"
-packages = [{ include = "turbo", from = "." }]
+packages = [{ include = "turbo" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
