--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "uber-turbo"
-version = "0.1.2"
+version = "0.1.3"
 description = "Packaged fork from uber-research/TuRBO"
 authors = ["Uber Reasearch"]
 license = "https://github.com/uber-research/TuRBO/blob/master/LICENSE.md"
@@ -10,7 +10,7 @@ packages = [{ include = "turbo" }]
 [tool.poetry.dependencies]
 python = "^3.11"
 numpy = "^1.26.4"
-gpytorch = "0.3.6"
+gpytorch = "^1.11"
 torch = "^2.3.0"
 
 
